--- a/README
+++ b/README
@@ -1,5 +1,1 @@
-These rules refer to 
-
-http://developer.android.com/guide/developing/device.html
-
-and include many suggestions from the Archlinux and Github Community
+those script is use to fix the computer can not connected phone .I add some msm 8926 &8228 mobile usb model
